complete step 1: display solar raidation data of a specific place

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+env/
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
@@ -23,7 +23,9 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
+node_modules
+public/app.js
+public/vendors.js
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -45,32 +47,14 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
-.pytest_cache/
 
 # Translations
 *.mo
 *.pot
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-
 # Flask stuff:
 instance/
 .webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
 
 # pyenv
 .python-version
@@ -78,28 +62,16 @@ target/
 # celery beat schedule file
 celerybeat-schedule
 
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
+# virtualenv
 .venv
-env/
 venv/
 ENV/
-env.bak/
-venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# pylint
+.pylintrc
 
-# Rope project settings
-.ropeproject
+# log
+*.log
 
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.idea/
+# excel files
+*.xlsx
